# poker_solver_rust

./: .beans.yml  .dockerignore  .gitignore  100bb.yaml  CLAUDE.md  Cargo.toml  README.md  gpu_tabular_25bb.yaml  handclass_100bb.yaml  handclassv2.yaml  package-lock.json  test_sequence.yaml  tiny_100bb.yaml  training.yaml  training_lhe.yaml  training_mccfr.yaml  training_sdcfr.yaml  training_sdcfr_test.yaml
crates/cfvnet/: Cargo.toml
crates/cfvnet/benches/: solve.rs
crates/cfvnet/python/: pyproject.toml
crates/cfvnet/python/cfvnet/: __init__.py  config.py  constants.py  data.py  export.py  gpu_buffer.py  loss.py  model.py  train.py
crates/cfvnet/python/scripts/: eval_boundary.py  train_boundary.py
crates/cfvnet/python/tests/: test_config.py  test_data.py  test_dataset.py  test_e2e.py  test_encoding.py  test_export.py  test_loss.py  test_model.py  test_train.py
crates/cfvnet/src/: config.rs  lib.rs  main.rs
crates/cfvnet/src/datagen/: blueprint_ranges.rs  bucket_mapping.rs  bucketed_storage.rs  generate.rs  gpu_boundary_eval.rs  mod.rs  precompute_ranges.rs  range_gen.rs  sampler.rs  solver.rs  storage.rs  turn_generate.rs
crates/cfvnet/src/eval/: boundary_evaluator.rs  compare.rs  compare_bucketed.rs  compare_turn.rs  metrics.rs  mod.rs  river_net_evaluator.rs
crates/cfvnet/src/model/: boundary_dataset.rs  boundary_net.rs  boundary_training.rs  bucketed_network.rs  bucketed_training.rs  dataset.rs  loss.rs  mod.rs  network.rs  training.rs
crates/cfvnet/tests/: integration_test.rs
crates/convergence-harness/: Cargo.toml
crates/convergence-harness/src/: baseline.rs  comparison.rs  config.rs  evaluator.rs  game.rs  harness.rs  lib.rs  main.rs  metrics.rs  reporter.rs  solver_trait.rs  strategy_matrix.rs
crates/convergence-harness/src/solvers/: exhaustive.rs  mccfr.rs  mod.rs
crates/convergence-harness/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/benches/: equity_table_bench.rs  postflop_solve_bench.rs  preflop_solver_bench.rs  sequence_cfr_bench.rs  tensor_ops.rs
crates/core/examples/: bench_mccfr.rs  debug_load.rs  hand_class_histogram.rs  train_blueprint.rs  validate_flops.rs
crates/core/src/: abstract_game.rs  agent.rs  card_utils.rs  config.rs  device.rs  equity.rs  error.rs  flops.rs  hand_class.rs  hands.rs  info_key.rs  lib.rs  range.rs  showdown_equity.rs  simulation.rs  tree.rs
crates/core/src/abstraction/: buckets.rs  error.rs  generator.rs  hand_strength.rs  isomorphism.rs  mod.rs
crates/core/tests/: abstraction_integration.rs  blueprint_integration.rs  blueprint_mp_validation.rs  blueprint_v2_e2e.rs  cfr_mechanics.rs  convergence_metrics_test.rs  full_pipeline.rs  hunl_postflop_integration.rs  hunl_preflop_cfr.rs  kuhn_convergence.rs  lcfr_convergence.rs  mccfr_hunl_integration.rs  pairwise_equity.rs  postflop_cfr_mechanics.rs  postflop_diagnostics.rs  postflop_imperfect_recall.rs  preflop_avg_regret_test.rs  preflop_convergence.rs
crates/deep-cfr/: Cargo.toml
crates/deep-cfr/src/: batched_traverse.rs  card_features.rs  config.rs  eval.rs  hunl_encoder.rs  lhe_encoder.rs  lhe_exploitability.rs  lib.rs  memory.rs  model_buffer.rs  network.rs  solver.rs  traverse.rs
crates/deep-cfr/tests/: hunl_integration.rs  kuhn_convergence.rs
crates/devserver/: Cargo.toml
crates/devserver/src/: main.rs
crates/gpu-cfr/: Cargo.toml
crates/gpu-cfr/examples/: bench_solvers.rs
crates/gpu-cfr/src/: lib.rs  tabular.rs  tiled.rs
crates/gpu-solver/: Cargo.toml
crates/gpu-solver/kernels/: average_leaf_cfvs.cu  average_preflop_cfvs.cu  backward_cfv.cu  bucketed_fold.cu  bucketed_fold_batch.cu  bucketed_showdown.cu  bucketed_showdown_batch.cu  compute_payoffs.cu  dcfr_persistent.cu  encode_leaf_inputs.cu  encode_leaf_inputs_flop.cu  encode_preflop_inputs.cu  evaluate_hand_strengths.cu  extract_strategy.cu  fold_eval_from_aggregates.cu  fold_eval_from_aggregates_batch.cu  forward_pass.cu  forward_reach.cu  generate_random_indices.cu  nn_forward.cu  precompute_fold_aggregates.cu  precompute_fold_aggregates_batch.cu  regret_match.cu  reservoir_encode_insert.cu  reservoir_gather.cu  sample_flop_situations.cu  sample_river_situations.cu  sample_turn_situations.cu  scale_cfvs.cu  scatter_opp_reach_sorted.cu  segmented_prefix_sum.cu  set_root_reach.cu  showdown_block_correction.cu  showdown_eval_block_scan.cu  showdown_eval_fast.cu  showdown_eval_sorted_batch.cu  showdown_lookup_cfv.cu  terminal_fold_eval.cu  terminal_fold_eval_batch.cu  terminal_showdown_eval.cu  (+6 more)
crates/gpu-solver/src/: batch.rs  gpu.rs  lib.rs  resolve.rs  solver.rs  tests.rs  tree.rs
crates/gpu-solver/tests/: bench_batch.rs  bench_large_trees.rs  compare_range_solver.rs  debug_compare.rs
crates/rebel/: Cargo.toml
crates/rebel/src/: belief_update.rs  blueprint_sampler.rs  config.rs  data_buffer.rs  generate.rs  inference_server.rs  leaf_evaluator.rs  lib.rs  orchestration.rs  pbs.rs  replay_buffer.rs  self_play.rs  solver.rs  subgame_solve.rs  training.rs  validation.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: boundary_trace.rs  commands.rs  exact_subtree.rs  exploration.rs  gadget.rs  game_session.rs  hybrid_evaluator.rs  lib.rs  main.rs  postflop.rs  simulation.rs
crates/tauri-app/tests/: blueprint_explorer_integration.rs  hybrid_integration.rs
crates/test-macros/: Cargo.toml
crates/test-macros/src/: lib.rs
crates/trainer/: Cargo.toml
crates/trainer/src/: bench_rollout.rs  blueprint_tui.rs  blueprint_tui_audit.rs  blueprint_tui_audit_widget.rs  blueprint_tui_config.rs  blueprint_tui_metrics.rs  blueprint_tui_resolve.rs  blueprint_tui_scenarios.rs  blueprint_tui_widgets.rs  boundary_trace.rs  bucket_diagnostics.rs  compare_solve.rs  hand_trace.rs  inspect_spot.rs  lhe_diagnose.rs  lhe_viz.rs  log_file.rs  main.rs  mp_tui.rs  mp_tui_scenarios.rs  mp_tui_widgets.rs  tree.rs  tree_dump.rs  tui.rs  tui_metrics.rs  validate_blueprint.rs  validate_rollout.rs  validation_spots.rs
crates/trainer/tests/: blueprint_tui_integration.rs
(+847 files in other folders)
