[workspace]
resolver = "2"
members = ["crates/core", "crates/tauri-app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["LTJ"]

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Poker domain types
rs_poker = { version = "4.1", default-features = false }

# GPU/ML backend - use burn with feature flags
burn = { version = "0.16", default-features = false }
