[workspace]
resolver = "2"
members = ["crates/core", "crates/tauri-app", "crates/trainer", "crates/test-macros", "crates/devserver", "crates/range-solver", "crates/cfvnet", "crates/convergence-harness"]
exclude = ["crates/range-solver-compare"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["LTJ"]

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Poker domain types
rs_poker = { version = "4.1", features = ["arena", "serde"] }

# Stack-allocated collections
arrayvec = "0.7"

# Fast hash for short string keys
rustc-hash = "2.1"

# Data parallelism
rayon = "1.10"

[profile.release]
lto = "thin"
codegen-units = 8
opt-level = 3
