[package]
name = "cfvnet"
version.workspace = true
edition.workspace = true

[dependencies]
range-solver = { path = "../range-solver" }
poker-solver-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"
rand_chacha = "0.3"
rayon = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
indicatif = "0.17"
thiserror = { workspace = true }
burn = { version = "0.16", features = ["train", "wgpu", "ndarray"] }

[dev-dependencies]
tempfile = "3"
