[package]
name = "cfvnet"
version.workspace = true
edition.workspace = true

[dependencies]
range-solver = { path = "../range-solver" }
poker-solver-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"
rand_chacha = "0.3"
rayon = { workspace = true }
bincode = "1.3"
bytemuck = { version = "1", features = ["derive"] }
indicatif = "0.17"
thiserror = { workspace = true }
burn = { version = "0.16", features = ["train", "wgpu", "ndarray"] }
burn-cuda = { version = "0.16", optional = true }
gpu-range-solver = { path = "../gpu-range-solver", optional = true }
ort = { version = "=2.0.0-rc.9", optional = true, default-features = false, features = ["ndarray", "half", "copy-dylibs"] }
half = "2"

[features]
default = []
cuda = ["burn/cuda-jit"]
gpu-datagen = ["gpu-range-solver"]
onnx = ["ort"]
onnx-gpu = ["ort", "ort/cuda", "ort/tensorrt"]
gpu-turn-datagen = ["gpu-datagen", "onnx-gpu"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "solve"
harness = false
