[package]
name = "poker-solver-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CFR poker solver core library"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
rs_poker.workspace = true

# Burn with feature flags for different backends
burn = { workspace = true, optional = true, features = ["ndarray", "wgpu"] }
rmp-serde = "1.3.1"
rand = "0.9.2"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.24.0"

[[bench]]
name = "tensor_ops"
harness = false

[features]
default = []
gpu = ["burn"]
