[package]
name = "poker-solver-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CFR poker solver core library"

[dependencies]
thiserror.workspace = true
serde.workspace = true
arrayvec.workspace = true
rustc-hash.workspace = true
rayon.workspace = true
serde_yaml.workspace = true
rs_poker.workspace = true

rmp-serde = "1.3.1"
toml = "0.8"
rand = "0.9.2"
lru = "0.12"
sled = "0.34"
bincode = "1.3"
indicatif = "0.17"
tracing = "0.1"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.24.0"
test-macros = { path = "../test-macros" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sequence_cfr_bench"
harness = false

[[bench]]
name = "preflop_solver_bench"
harness = false
