[package]
name = "poker-solver-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CFR poker solver core library"

[dependencies]
thiserror.workspace = true
serde.workspace = true
arrayvec.workspace = true
rustc-hash.workspace = true
rayon.workspace = true
serde_yaml.workspace = true
rs_poker.workspace = true

range-solver = { path = "../range-solver" }
rmp-serde = "1.3.1"
toml = "0.8"
rand = "0.9.2"
fastkmeans-rs = { version = "0.1.8", features = ["accelerate"] }
ndarray = "0.16"
bincode = "1.3"
indicatif = "0.17"

[dev-dependencies]
proptest = "1.4"
serde_json = "1"
tempfile = "3.24.0"
test-macros = { path = "../test-macros" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "equity_table_bench"
harness = false
