[package]
name = "poker-solver-deep-cfr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Single Deep CFR solver for poker"

[dependencies]
poker-solver-core = { path = "../core" }
thiserror.workspace = true
serde.workspace = true
rs_poker.workspace = true
rand = "0.9.2"

tracing = "0.1"
indicatif = "0.17"
candle-core = "0.9"
candle-nn = "0.9"
safetensors = "0.7"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[dev-dependencies]
proptest = "1.4"
rustc-hash = "2"
