[package]
name = "poker-solver-gpu-cfr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GPU-accelerated CFR solver using wgpu compute shaders"

[dependencies]
poker-solver-core = { path = "../core" }
wgpu = "28"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
rustc-hash.workspace = true
thiserror.workspace = true
rayon.workspace = true
