[package]
name = "poker-solver-gpu"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["cudarc"]
training = ["cuda", "cfvnet", "burn"]

[dependencies]
cudarc = { version = "0.16", features = ["std", "driver", "nvrtc", "cublas", "cuda-12010"], optional = true }
poker-solver-core = { path = "../core" }
range-solver = { path = "../range-solver" }
cfvnet = { path = "../cfvnet", optional = true }
burn = { version = "0.16", features = ["train", "ndarray"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { workspace = true }
rs_poker = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
indicatif = "0.17"

[dev-dependencies]
approx = "0.5"
tempfile = "3"
rand = "0.8"
