[package]
name = "rebel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
poker-solver-core = { path = "../core" }
range-solver = { path = "../range-solver" }
cfvnet = { path = "../cfvnet" }

serde.workspace = true
serde_yaml.workspace = true
rayon.workspace = true
rs_poker.workspace = true

rand = "0.9"
rand_chacha = "0.9"
memmap2 = "0.9"
burn = { version = "0.16", features = ["ndarray"] }

[dev-dependencies]
tempfile = "3"
