[package]
name = "poker-solver-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
poker-solver-core = { path = "../core" }
rs_poker = { workspace = true }

[dev-dependencies]
test-macros = { path = "../test-macros" }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
