[package]
name = "test-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Proc macro for timed test execution with automatic timeout"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
