[package]
name = "poker-solver-trainer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for training poker blueprint strategies"

[dependencies]
poker-solver-core = { path = "../core" }
range-solver = { path = "../range-solver" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
ratatui = "0.29"
crossterm = "0.28"
serde.workspace = true
serde_yaml.workspace = true
rand = "0.9.2"

[dev-dependencies]
tempfile = "3"
test-macros = { path = "../test-macros" }
