[project]
name = "cfvnet"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "onnxscript>=0.6.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["cfvnet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
